--- a/SparkonicsWebsite-master/index.html
+++ b/SparkonicsWebsite-master/index.html
@@ -384,10 +384,10 @@
                                             </li>
 
                         <!---------------------------------------2------------------------------------------------>                                            
-                                            <!-- li class="swiper-slide">
+                                            <li class="swiper-slide">
                                                 <div class="site-box">
                                                     <figure>
-                                                        <img src="./images/ADITHYA.jpeg" alt="User" style="width: 1500px; height: 500px; object-fit: cover;">
+                                                        <img src="./images/ADITYA.jpeg" alt="User" style="width: 1500px; height: 500px; object-fit: cover;">
                                                       </figure>
                                                     <h5>ADITYA CHAUHAN </h5>
                                                     <h6>Coordinator</h6>
@@ -400,7 +400,7 @@
                                                                 class="fa fa-linkedin"></i></a>
                                                     </div>
                                                 </div>
-                                            </li -->
+                                            </li>
                         <!----------------------------------------3----------------------------------------------->                                            
                                             <li class="swiper-slide">
                                                 <div class="site-box">
