--- a/SparkonicsWebsite-master/index.html
+++ b/SparkonicsWebsite-master/index.html
@@ -24,7 +24,7 @@
     <link rel="manifest" href="./manifest.json">
 
 </head>
-
+                                            <!----------------->
 <body>
 
     <!-- WRAPPER -->
@@ -55,8 +55,8 @@
                             </div>
                             <div class="col-xs-4 col-sm-9">
 
-                                <!-- NAVIGATION -->
-                                <nav class="site-nav" id="site-nav" role="navigation">
+
+                               <nav class="site-nav" id="site-nav" role="navigation">
                                     <!-- MOBILE VIEW BUTTON -->
                                     <div class="nav-mobile">
                                         <i class="fa fa-bars show"></i>
@@ -68,11 +68,12 @@
                                         <li class="active"><a href="#site-home">Home</a></li>
                                         <li><a href="#site-about">About</a></li>
                                         <li><a href="#site-events">Events</a></li>
-                                        <!-- <li><a href="#site-spmp">SPMP</a></li> -->
                                         <li><a href="#site-projects">Projects</a></li>
-                                        <li><a href="#site-team">Team</a></li>
-                                        <!-- <li><a href="#site-gallery">Gallery</a></li> -->
+                                        <li><a href="#site-team">Team</a></li>                                       
                                         <li><a href="#site-connect">Connect</a></li>
+
+                                        <!--  <li><a href="#site-gallery">Gallery</a></li>
+                                        <li><a href="#site-spmp">SPMP</a></li>  -->
 
                                     </ul>
                                 </nav>
