--- a/SparkonicsWebsite-master/index.html
+++ b/SparkonicsWebsite-master/index.html
@@ -760,7 +760,7 @@
         </section>
 
         <!-- FOOTER -->
-        <footer class="site-footer section-blue">
+<!--         <footer class="site-footer section-blue">
             <div class="container">
                 <div style="text-align: center;">
                     CONNECT WITH US
@@ -774,11 +774,42 @@
                     <a target="_blank" href="mailto:sparkonics@iitp.ac.in"><i class="fa fa-envelope"></i></a>
                     <a target="_blank" href="https://goo.gl/maps/BBu2bxUeUWFwzYv66"><i class=" fa
                         fa-map-marker"></i></a>
-                    <!-- <a target="_blank" href="#"><i class="fa fa-instagram"></i></a> -->
-                    <!-- <a target="_blank" href="#"><i class="fa fa-youtube"></i></a> -->
+                   
                 </div>
             </div>
+        </footer> -->
+         <!-- <a target="_blank" href="#"><i class="fa fa-instagram"></i></a> -->
+        <!-- <a target="_blank" href="#"><i class="fa fa-youtube"></i></a> -->
+        <footer>
+            <div class="footer-container">
+                <div class="footer-section about">
+                    <h2>About Us</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros vel lacus convallis luctus.</p>
+                </div>
+                <div class="footer-section links">
+                    <h2>Quick Links</h2>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section social">
+                    <h2>Follow Us</h2>
+                    <div class="social-links">
+                        <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+                        <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+                        <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+                        <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 My Website | Designed by Me</p>
+            </div>
         </footer>
+
 
     </div>
     <!-- END WRAPPER -->
